Fix minor layout issues

--- a/src/css/wallet-layout.css
+++ b/src/css/wallet-layout.css
@@ -1,32 +1,22 @@
+.pocket {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .graphic-pocket-container {
   position: relative;
   width: 200px;
   height: 300px;
-  /* border: 2px solid red; */
   text-align: center;
 }
 
-.graphic-pocket-container svg {
-  width: 100%;
-  height: 100%;
-}
-.graphic-pocket-container image {
-  width: 100%;
-  height: 100%;
-}
-
 .graphic-pocket {
-  /* border: 2px solid black; */
   position: absolute;
-  /* top: 0;
-    left: 0; */
-  /* width: 100%;
-    height: 100%; */
-
-  bottom: 14px;
-  left: 20px;
-  width: 150px;
-  height: 140px;
+  bottom: 5%;
+  left: 10%;
+  width: 80%;
+  height: 45%;
   text-align: center;
   border-radius: 5px;
   display: flex;
@@ -60,6 +50,8 @@ img.coin {
 .creation-controls {
   display: flex;
   justify-content: space-evenly;
+  align-items: center;
+  gap: 5px;
   min-height: 20px;
 }
 
